Tweak inventory. Move to other compute.

--- a/inventories/homelab.yml
+++ b/inventories/homelab.yml
@@ -1,6 +1,7 @@
 homelab:
   children:
     plex_server:
-      hosts:
-        ben-nuc7:
-          ansible_ssh_user: ben
+
+plex_server:
+  hosts:
+    ben-nuc8:
